@@ -1,15 +1,18 @@
 #from zope.interface import Interface
 from Products.Archetypes.interfaces.base import IBaseContent
 from plone.indexer.decorator import indexer
+from zope.annotation.interfaces import IAnnotations
 
 @indexer(IBaseContent)
 def get_included_in_sitemapxml(object, **kw):
-    if object.hasProperty('pSEO_included_in_sitemapxml'):
-        return object.getProperty('pSEO_included_in_sitemapxml', None)
+    annotations = IAnnotations(object)
+    if annotations.has_key('pSEO_included_in_sitemapxml'):
+        return annotations.get('pSEO_included_in_sitemapxml', None)
     return None
 
 @indexer(IBaseContent)
 def get_priority_sitemapxml(object, **kw):
-    if object.hasProperty('pSEO_priority_sitemapxml'):
-        return object.getProperty('pSEO_priority_sitemapxml', None)
+    annotations = IAnnotations(object)
+    if annotations.has_key('pSEO_priority_sitemapxml'):
+        return annotations.get('pSEO_priority_sitemapxml', None)
     return None
