@@ -16,6 +16,7 @@ Changelog
 - Added getPrioritySitemapxml metadata and a custom index method to access this metadata [fdelia]
 - Updated sitemap.xml.gz generation view, calculate priority for each object, according to the getPrioritySitemapxml metadata [fdelia]
 - Personalized main_template for added itemscope and itemtype attributes to tag body [fdelia]
+- Migrated properties to annotations [fdelia]
 
 0.1.0 (2011-07-20)
 ------------------
